--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <header>
         <h1>Etch-a-Sketch</h1>
     </header>
-    <section id="grid">
-        
+    <section id="ui">
+        <button onclick="handleBtnClick('')">Edit Grid Size</button>
+    </section>
+    <section id="output">
     </section>
     <script src="main.js"></script>
 </body>
