--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <button onclick="handleBtnClick('')">Edit Grid Size</button>
     </section>
     <section id="output">
+        <div id="grid-container">
+            
+        </div>
     </section>
     <script src="main.js"></script>
 </body>
